pcap and worker updates
