# backend/src/endpoints/PcapEndpoint.ts
@@ -6,6 +6,7 @@ import fs, { promises as fsPromises } from 'fs';
 import { IState, ITestRun } from '../lib/data_types';
 import moment from 'moment';
 import DB, { FileType } from '../database';
+import { AC } from '../controller/AnvilController';
 import { TestRunEditSchema } from 'database/models';
 
 
@@ -27,29 +28,37 @@ export namespace PcapEndpoint {
       const testId = req.params.testId
       const uuid = req.params.uuid
 
-      const report = await DB.Report.findOne({ Identifier: identifier }).select({_id: 1}).lean().exec()
+      let job = AC.getAllJobs().find(j => j.report && j.report.Identifier == identifier);
+      let testRun;
+      if (job) {
+        testRun = job.testRuns[testId];
+      } else {
+        const report = await DB.Report.findOne({ Identifier: identifier }).select({_id: 1}).lean().exec()
         if (!report) {
           return next(new BadRequest("identifier not found"));
         }
-        let pcap = await DB.TestRun.findOne({
+        testRun = await DB.TestRun.findOne({
           ContainerId: report._id.toString(), 
           TestId: testId
-        }).then((testRun) => {
-          for (let testCase of testRun.TestCases) {
-            if (testCase.uuid === uuid) {
-              return testCase.PcapData;
-            }
-          }
-          return null;
         });
-
-        if (pcap) {
-          res.type('application/octet-stream')
-          res.send(pcap)
-        } else {
-          res.status(204)
-          res.send()
+      }
+      let pcap;
+      if (!testRun.TestCases) {
+        return next(new BadRequest("no testcases found"));
+      }
+      for (let testCase of testRun.TestCases) {
+        if (testCase.uuid === uuid) {
+           pcap = testCase.PcapData;
+           break;
         }
+      }
+      if (pcap) {
+        res.type('application/octet-stream')
+        res.send(pcap)
+      } else {
+        res.status(204)
+        res.send()
+      }
     }
 
     private async displayPcap(req: Request, res: Response, next: NextFunction) {
@@ -57,40 +66,49 @@ export namespace PcapEndpoint {
       const testId = req.params.testId
       const uuid = req.params.uuid
 
-      const report = await DB.Report.findOne({ Identifier: identifier }).select({_id: 1}).lean().exec()
+      let job = AC.getAllJobs().find(j => j.report && j.report.Identifier == identifier);
+      let testRun;
+      if (job) {
+        testRun = job.testRuns[testId];
+      } else {
+        const report = await DB.Report.findOne({ Identifier: identifier }).select({_id: 1}).lean().exec()
         if (!report) {
           return next(new BadRequest("identifier not found"));
         }
-        let pcap = await DB.TestRun.findOne({
+        testRun = await DB.TestRun.findOne({
           ContainerId: report._id.toString(), 
           TestId: testId
-        }).then((testRun) => {
-          for (let testCase of testRun.TestCases) {
-            if (testCase.uuid === uuid) {
-              return testCase.PcapData;
-            }
-          }
-          return null;
         });
-
-        if (pcap) {
-          let output = await this.execProgram(pcap, 
-            //'tshark', 
-            'C:\\Program Files\\Wireshark\\tshark.exe',
-            [
-              '-n', '-r', '-',
-              //'-o', `tls.keylog_file:/tmp/k${container.KeylogfileStorageId}`,
-              '-o', 'gui.column.format:"Time","%Aut","s","%uS","d","%uD","Protocol","%p","Info","%i"',
-              '-T', 'tabs'
-            ]
-          )
-
-          res.type("text/plain")
-          res.send(output)
-        } else {
-          res.status(204)
-          res.send()
+      }
+      let pcap;
+      if (!testRun.TestCases) {
+        return next(new BadRequest("no testcases found"));
+      }
+      for (let testCase of testRun.TestCases) {
+        if (testCase.uuid === uuid) {
+           pcap = testCase.PcapData;
+           break;
         }
+      }
+
+      if (pcap) {
+        let output = await this.execProgram(pcap, 
+          //'tshark', 
+          'C:\\Program Files\\Wireshark\\tshark.exe',
+          [
+            '-n', '-r', '-',
+            //'-o', `tls.keylog_file:/tmp/k${container.KeylogfileStorageId}`,
+            '-o', 'gui.column.format:"Time","%Aut","s","%uS","d","%uD","Protocol","%p","Info","%i"',
+            '-T', 'tabs'
+          ]
+        )
+
+        res.type("text/plain")
+        res.send(output)
+      } else {
+        res.status(204)
+        res.send()
+      }
     }
 
     private async execProgram(stdin: Buffer, program: string, args: string[]): Promise<Buffer> {
